<resources>
    <string name="app_name">Significant</string>

    <string name="bottomtext1">Main</string>
    <string name="bottomtext2">Video</string>
    <string name="bottomtext3">Girls</string>
    <string name="bottomtext4">Other</string>
    <string name="maintitle">头条</string>

    <string name="set">设置</string>
    <string name="about">关于</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <integer name="飞一会">600</integer>

    <string name="exit">再按一次退出应用</string>

    <string name="title_weather">今日天气状况</string>
    <string name="weather_API_Key">282f3846df6b41178e4a2218ae083ea7</string>
    <string name="weather_error_msg">天气数据获取异常</string>

    <string name="error_msg">获取异常</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_news">MainNewsActivity</string>

    <string name="girls_url">http://gank.io/</string>
    <string name="nbalive_url">http://espnzhibo.com/espn?from=singlemessage&amp;isappinstalled=0
    </string>

    <string name="email">kongdy725@gmail.com</string>
    <string name="my_github">https://github.com/learnYU</string>
    <string name="url_login_github">https://github.com/login</string>
    <string name="url_github_trending">https://github.com/trending</string>
    <string name="url_gank_io">http://gank.io/</string>
    <string name="blog_drakeet">http://drakeet.me</string>
    <string name="api">http://gank.io/</string>

    <string name="picture_saved">图片已保存至 %s 文件夹</string>
    <string name="action_share">分享</string>
    <string name="action_save">保存到手机</string>
    <string name="follow">收藏</string>
    <string name="no_follow">取消收藏</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="clean_cache">缓存清理完成✅</string>
</resources>
