<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="app_intro"
            android:title="应用详情"/>
        <Preference
            android:key="version"
            android:title="当前版本"
            android:summary="version 1.0"/>
        <Preference
            android:key="check_update"
            android:title="检查更新"/>
        <Preference
            android:shouldDisableView="false"
            android:key="demo_video"
            android:title="演示视频"/>
        <Preference
            android:key="star"
            android:title="点个赞"
            android:summary="去GitHub 给我点个赞吧"/>
        <Preference
            android:key="share"
            android:title="分享给其他人" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="作者"
        android:summary="kongdy">
        <Preference
            android:key="github"
            android:title="Github"
            android:summary="@string/my_github"/>
        <Preference
            android:key="email"
            android:title="邮箱"
            android:summary="@string/email" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="版权">
        <Preference
            android:title="数据与资源"
            android:summary="数据与资源来源于网络，版权属于原作者" />
        <Preference
            android:title="注意"
            android:summary="此项目禁止用于商业目的"/>
        <Preference
            android:title="License"
            android:summary="   Significant is free software: you can redistribute it and/or modify　it under the terms of the GNU General
Public License as published by the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n
    Significant is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n" />
    </PreferenceCategory>

</PreferenceScreen>