<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bonc.kongdy.significant.view.MainNewsActivity">

    <include layout="@layout/view_toolbar"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:layout_marginTop="@dimen/toolbar_height">
    </FrameLayout>

    <LinearLayout
        android:background="@color/md_white_1000"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:id="@+id/bottom_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="@dimen/bottom_height" android:id="@+id/tab1">

            <ImageView
                android:id="@+id/iv1"
                android:src="@mipmap/tab_news_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv1"/>
            <TextView
                android:id="@+id/tv1"
                android:text="@string/bottomtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_height"
            android:layout_gravity="center_horizontal" android:id="@+id/tab2">

            <ImageView
                android:id="@+id/iv2"
                android:src="@mipmap/tab_video"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv2"/>
            <TextView
                android:id="@+id/tv2"
                android:text="@string/bottomtext2"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_height" android:id="@+id/tab3">

            <ImageView
                android:id="@+id/iv3"
                android:src="@mipmap/tab_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv3"/>
            <TextView
                android:id="@+id/tv3"
                android:text="@string/bottomtext3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_height"
            android:layout_gravity="center_horizontal" android:id="@+id/tab4">

            <ImageView
                android:id="@+id/iv4"
                android:src="@mipmap/tab_pic"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv4"/>
            <TextView
                android:id="@+id/tv4"
                android:text="@string/bottomtext4"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
