<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bottom_height">

        <ImageView
            android:id="@+id/iv1"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv1"/>
        <TextView
            android:id="@+id/tv1"
            android:text="@string/bottomtext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bottom_height"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv2"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv2"/>
        <TextView
            android:id="@+id/tv2"
            android:text="@string/bottomtext1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bottom_height">

        <ImageView
            android:id="@+id/iv3"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv3"/>
        <TextView
            android:id="@+id/tv3"
            android:text="@string/bottomtext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bottom_height"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv4"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv4"/>
        <TextView
            android:id="@+id/tv4"
            android:text="@string/bottomtext4"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>